--- a/style.css
+++ b/style.css
@@ -1,55 +1,16 @@
-@media (min-width: 768px) {
-    .animate {
-      animation-duration: 0.3s;
-      -webkit-animation-duration: 0.3s;
-      animation-fill-mode: both;
-      -webkit-animation-fill-mode: both;
-    }
-  }
-  
-  @keyframes slideIn {
-    0% {
-      transform: translateY(1rem);
-      opacity: 0;
-    }
-  
-    100% {
-      transform: translateY(0rem);
-      opacity: 1;
-    }
-  
-    0% {
-      transform: translateY(1rem);
-      opacity: 0;
-    }
-  }
-  
-  @-webkit-keyframes slideIn {
-    0% {
-      -webkit-transform: transform;
-      -webkit-opacity: 0;
-    }
-  
-    100% {
-      -webkit-transform: translateY(0);
-      -webkit-opacity: 1;
-    }
-  
-    0% {
-      -webkit-transform: translateY(1rem);
-      -webkit-opacity: 0;
-    }
-  }
-  
-  .slideIn {
-    -webkit-animation-name: slideIn;
-    animation-name: slideIn;
-  }
-  
-  /* Other styles for the page not related to the animated dropdown */
-  
   body {
-    background: #826fee;
+    background: #8471eb;
     background: linear-gradient(to right, #e01010, #1629d3);
     
+  }
+color{
+  color:rgb(0, 132, 255)
+}
+
+  .card-body {
+    background: #7506f5;
+  }
+  .card-image-top {
+   
+  flood-color: rgb(185, 150, 150);
   }
